# routes/index.js
@@ -7,6 +7,7 @@ router.get('/', (req, res) => {
     res.json({ message: 'Welcome to the API' });
 });
 
+router.use('/auth', require('./auth'));
 router.use('/users', require('./users'));
 router.use('/job_posts', require('./job_posts'));
 
