# routes/users.js
@@ -1,12 +1,12 @@
 const express = require('express');
 const router = express.Router();
-
 const usersController = require('../controllers/users');
+const { isAuthenticated } = require('../middleware/authenticate');
 
 router.get('/', usersController.getAllUsers);
-router.post('/', usersController.createUser);
+router.post('/', isAuthenticated, usersController.createUser);
 router.get('/:id', usersController.getUserById);
-router.put('/:id', usersController.updateUser);
-router.delete('/:id', usersController.deleteUser);
+router.put('/:id', isAuthenticated, usersController.updateUser);
+router.delete('/:id', isAuthenticated, usersController.deleteUser);
 
 module.exports = router;
